--- a/github/src/main/res/navigation/main_navigation.xml
+++ b/github/src/main/res/navigation/main_navigation.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:startDestination="@id/loginFragment"
-    android:id="@+id/main_navigation">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main_navigation"
+        app:startDestination="@id/welcomeFragment">
 
     <fragment
-        android:id="@+id/loginFragment"
-        android:name="cn.luozhanming.github.ui.login.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_github_login">
+            android:id="@+id/welcomeFragment"
+            android:name="cn.luozhanming.github.ui.start.WelcomeFragment"
+            android:label="fragment_welcome"
+            tools:layout="@layout/fragment_github_welcome">
+        <action
+                android:id="@+id/toLoginFragment"
+                app:destination="@id/loginFragment" />
+    </fragment>
+
+    <fragment
+            android:id="@+id/loginFragment"
+            android:name="cn.luozhanming.github.ui.start.LoginFragment"
+            android:label="fragment_login"
+            tools:layout="@layout/fragment_github_login" >
+
     </fragment>
 
 </navigation>
