--- a/github/src/main/res/values/colors.xml
+++ b/github/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#24292E</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorPrimaryTrans">#B324292E</color>
 </resources>
