--- a/github/src/main/res/values/colors.xml
+++ b/github/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="colorPrimaryTrans">#B324292E</color>
+
+    <color name="title_text_color">#F4F4F4</color>
+    <color name="normal_text_color">#1F1F1F</color>
+    <color name="edittext_hint_color">#2F2F2F</color>
 </resources>
