--- a/github/src/main/res/drawable/bg_github_confirm_button.xml
+++ b/github/src/main/res/drawable/bg_github_confirm_button.xml
@@ -3,14 +3,14 @@
     <item android:state_pressed="false">
         <shape>
             <corners android:radius="5dp" />
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/colorAccent" />
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape>
             <corners android:radius="5dp" />
-            <solid android:color="@color/colorPrimaryTrans" />
+            <solid android:color="@color/colorAccentAlpha" />
         </shape>
     </item>
 </selector>
