--- a/github/src/main/res/layout/activity_oauth_web.xml
+++ b/github/src/main/res/layout/activity_oauth_web.xml
@@ -4,6 +4,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
             android:orientation="vertical">
 
         <FrameLayout
@@ -11,6 +12,15 @@
             android:layout_width="match_parent"
             android:background="@color/colorPrimary"
             android:layout_height="@dimen/titlebar_height">
+
+            <ImageView
+                    android:id="@+id/iv_close"
+                    android:src="@mipmap/ic_close"
+                    android:layout_width="32dp"
+                    android:background="@drawable/bg_text_button_1"
+                    android:layout_marginLeft="8dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_height="32dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:textColor="@color/title_text_color"
