--- a/github/src/main/res/layout/fragment_github_login.xml
+++ b/github/src/main/res/layout/fragment_github_login.xml
@@ -104,8 +104,8 @@
                 <Button
                         android:id="@+id/btn_login"
                         android:layout_width="match_parent"
-                        android:layout_height="46dp"
-                        android:textSize="20sp"
+                        android:layout_height="@dimen/button_height_1"
+                        android:textSize="@dimen/button_textsize_1"
                         android:layout_marginLeft="@dimen/margin_horizontal"
                         android:layout_marginTop="30dp"
                         android:layout_marginRight="@dimen/margin_horizontal"
