--- a/github/src/main/res/layout/activity_github_main.xml
+++ b/github/src/main/res/layout/activity_github_main.xml
@@ -10,14 +10,18 @@
     </data>
 
     <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:orientation="vertical">
-
-        <include layout="@layout/include_main_content" />
 
         <include
             layout="@layout/nav_header_main"
+            bind:loginUser="@{mainViewModel.mLoginUser}" />
+
+        <include
+            layout="@layout/include_main_content"
             bind:loginUser="@{mainViewModel.mLoginUser}" />
 
     </androidx.drawerlayout.widget.DrawerLayout>
