--- a/github/src/main/res/values/colors.xml
+++ b/github/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#24292E</color>
-    <color name="colorPrimaryDark">#2A88F6</color>
+    <color name="colorPrimaryDark">#24292E</color>
     <color name="colorAccent">#2DBF4E</color>
 
     <color name="colorAccentAlpha">#B32DBF4E</color>
@@ -9,4 +9,5 @@
     <color name="title_text_color">#F4F4F4</color>
     <color name="normal_text_color">#1F1F1F</color>
     <color name="edittext_hint_color">#2F2F2F</color>
+    <color name="divider_color">#3F1F1F1F</color>
 </resources>
