--- a/github/src/main/res/values/colors.xml
+++ b/github/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="normal_text_color">#1F1F1F</color>
     <color name="edittext_hint_color">#2F2F2F</color>
     <color name="divider_color">#3F1F1F1F</color>
+    <color name="bnb_active_color">#24292E</color>
+    <color name="bnb_inactivie_color">#7F2E292E</color>
+    <color name="windowBackgroudColor">#FBFBFB</color>
 </resources>
