--- a/github/src/main/res/layout/include_main_content.xml
+++ b/github/src/main/res/layout/include_main_content.xml
@@ -1,68 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
-            name="loginUser"
-            type="cn.luozhanming.fragment.UserObject" />
+                name="loginUser"
+                type="cn.luozhanming.fragment.UserObject" />
 
     </data>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
         <FrameLayout
-            android:id="@+id/titlebar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/titlebar_height"
-            android:background="@color/colorPrimary">
+                android:id="@+id/titlebar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/titlebar_height"
+                android:background="@color/colorPrimary">
 
             <LinearLayout
-                android:id="@+id/ll_drawer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="-6dp"
-                android:orientation="horizontal">
-
-                <ImageView
+                    android:id="@+id/ll_drawer"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:src="@mipmap/ic_drawer" />
+                    android:layout_marginLeft="-6dp"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:src="@mipmap/ic_drawer" />
 
 
                 <ImageView
-                    android:layout_width="26dp"
-                    android:layout_height="26dp"
-                    app:circleCrop="@{true}"
-                    app:imageUrl="@{loginUser.avatarUrl()}" />
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        app:circleCrop="@{true}"
+                        app:imageUrl="@{loginUser.avatarUrl()}" />
             </LinearLayout>
 
 
         </FrameLayout>
 
         <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/titlebar_height">
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/titlebar_height">
 
         </FrameLayout>
 
-       <com.ashokvarma.bottomnavigation.BottomNavigationBar
-           android:id="@+id/my_bnb"
-           android:layout_width="match_parent"
-           app:bnbBackgroundStyle="background_style_static"
-           android:layout_height="wrap_content"
-           android:layout_gravity="bottom"
-           app:bnbActiveColor="@color/bnb_active_color"
-           app:bnbInactiveColor="@color/bnb_inactivie_color"
-           app:bnbBackgroundColor="@color/white"/>
+        <com.ashokvarma.bottomnavigation.BottomNavigationBar
+                android:id="@+id/my_bnb"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                app:bnbActiveColor="@color/bnb_active_color"
+                app:bnbAutoHideEnabled="true"
+                app:bnbMode="mode_fixed"
+                app:bnbBackgroundColor="@color/white"
+                app:bnbBackgroundStyle="background_style_static"
+                app:bnbInactiveColor="@color/bnb_inactivie_color" />
 
 
     </FrameLayout>
