--- a/github/src/main/res/layout/fragment_feed.xml
+++ b/github/src/main/res/layout/fragment_feed.xml
@@ -11,7 +11,9 @@
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
                 android:id="@+id/refresh_layout"
                 android:layout_width="match_parent"
+                android:layout_marginTop="12dp"
                 android:layout_height="match_parent"
+                app:srlEnableFooterFollowWhenLoadFinished="true"
                 app:srlEnableAutoLoadMore="false"
                 app:srlEnableLoadMore="true"
                 app:srlEnableLoadMoreWhenContentNotFull="false">
